--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -906,7 +906,7 @@ Publisher: IEEE},
 	pages = {1103--1115},
 }
 
-@misc{Adorno2022,
+@techreport{Adorno2022,
 	title = {The {IncompleteGuide} to {Academic} {Writing} in {Robotics} {Research}},
 	url = {https://incompleteguides.github.io/},
 	author = {Adorno, Bruno Vilhena and Marinho, Murilo Marques},
