--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -660,7 +660,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {4048--4053},
 }
 
-@techreport{Adorno2017,
+@unpublished{Adorno2017,
 	title = {Robot {Kinematic} {Modeling} and {Control} {Based} on {Dual} {Quaternion} {Algebra} -- {Part} {I}: {Fundamentals}},
 	url = {https://hal.archives-ouvertes.fr/hal-01478225v1},
 	institution = {Federal University of Minas Gerais},
@@ -906,7 +906,7 @@ Publisher: IEEE},
 	pages = {1103--1115},
 }
 
-@techreport{Adorno2022,
+@unpublished{Adorno2022,
 	title = {The {IncompleteGuide} to {Academic} {Writing} in {Robotics} {Research}},
 	url = {https://incompleteguides.github.io/},
 	author = {Adorno, Bruno Vilhena and Marinho, Murilo Marques},
@@ -943,7 +943,7 @@ Publisher: IEEE},
 	annote = {There is a typo in the value of alpha. The correct is the one in the figure; that is, alpha is +1 when the CoM is above the horizontal axis and -1 otherwise. Remember to put an errata on my Webpage.},
 }
 
-@techreport{Silva2022a,
+@unpublished{Silva2022a,
 	title = {Dynamic {Modeling} of {Branched} {Robots} using {Modular} {Composition}},
 	url = {http://arxiv.org/abs/2208.01795},
 	abstract = {This letter proposes a systematic modular procedure for the dynamic modeling of branched robots comprising several subsystems, each of which being composed of multiple rigid bodies. Furthermore, the proposed strategy is applicable even if some subsystems are regarded as black boxes, requiring only the twists and wrenches at the connection points between different subsystems. To help in the model composition, we also propose a graph representation that encodes the propagation of twists and wrenches between the subsystems. Numerical results show that the proposed formalism is as accurate as a state-of-the-art library for robotic dynamic modeling.},
