--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,7 +61,7 @@
 	pages = {3777--3783},
 }
 
-@inproceedings{Bernardes2011,
+@conference{Bernardes2011,
 	address = {Berlin},
 	title = {Path planning for steerable needles using duty-cycling},
 	doi = {10.1007/s11548-011-0614-0},
@@ -683,7 +683,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {111--116},
 }
 
-@inproceedings{Silva2019,
+@conference{Silva2019,
 	title = {Wrench {Control} based on {Dual} {Quaternion} {Algebra}},
 	url = {https://zenodo.org/record/3566650},
 	doi = {10.5281/zenodo.3566650},
@@ -693,7 +693,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@inproceedings{Pereira2019,
+@conference{Pereira2019,
 	title = {Manipulation {Task} {Planning} and {Motion} {Control} {Using} {Task} {Relaxations}},
 	url = {https://zenodo.org/record/3566726},
 	doi = {10.5281/zenodo.3566726},
@@ -703,7 +703,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@inproceedings{Quiroz-Omana2019a,
+@conference{Quiroz-Omana2019a,
 	title = {Bimanual {Mobile} {Manipulation} {Using} the {Cooperative} {Dual} {Task}-{Space} {Framework} and {Vector} {Fields} {Inequalities}},
 	url = {https://zenodo.org/record/3566806},
 	doi = {10.5281/zenodo.3566806},
@@ -713,7 +713,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@inproceedings{Brito2019,
+@conference{Brito2019,
 	title = {Distributed {Coverage} of {Boundaries} for {Multi}-robot {Systems} {Using} {Dual} {Quaternion} {Algebra}},
 	url = {https://zenodo.org/record/3566792},
 	doi = {10.5281/zenodo.3566792},
@@ -723,7 +723,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@inproceedings{Fonseca2019,
+@conference{Fonseca2019,
 	title = {Task-{Space} {Impedance} {Controller} {Using} {Dual} {Quaternion} {Logarithm}},
 	url = {https://zenodo.org/record/3566610},
 	doi = {10.5281/zenodo.3566610},
@@ -733,7 +733,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@inproceedings{Campos2019,
+@conference{Campos2019,
 	title = {Human {Gesture} {Recognition} using {Dual} {Quaternion} {Algebra}},
 	url = {https://zenodo.org/record/3566656},
 	doi = {10.5281/zenodo.3566656},
@@ -743,7 +743,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@inproceedings{Urban2019,
+@conference{Urban2019,
 	title = {Constraint-based {Gait} {Control} {Using} {Differential} {Inequalities}},
 	url = {https://zenodo.org/record/3566763},
 	doi = {10.5281/zenodo.3566763},
