--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,7 +61,7 @@
 	pages = {3777--3783},
 }
 
-@conference{Bernardes2011,
+@misc{Bernardes2011,
 	address = {Berlin},
 	title = {Path planning for steerable needles using duty-cycling},
 	doi = {10.1007/s11548-011-0614-0},
