Added latest published papers.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,3 @@
----
----
-
 
 @inproceedings{Adorno2005,
 	title = {Planejamento de trajetória para o robô {OMNI} utilizando o algoritmo mapa de rotas probabilístico},
@@ -61,7 +58,7 @@
 	pages = {3777--3783},
 }
 
-@conference{Bernardes2011,
+@inproceedings{Bernardes2011,
 	address = {Berlin},
 	title = {Path planning for steerable needles using duty-cycling},
 	doi = {10.1007/s11548-011-0614-0},
@@ -639,7 +636,7 @@
 	month = oct,
 	year = {2019},
 	note = {arXiv: 1804.11270
-Publisher: IEEE},
+	Publisher: IEEE},
 	pages = {1166--1185},
 }
 
@@ -656,11 +653,11 @@ Publisher: IEEE},
 	month = oct,
 	year = {2019},
 	note = {arXiv: 1906.07322
-Publisher: Federal University of Minas Gerais},
+	Publisher: Federal University of Minas Gerais},
 	pages = {4048--4053},
 }
 
-@unpublished{Adorno2017,
+@techreport{Adorno2017,
 	title = {Robot {Kinematic} {Modeling} and {Control} {Based} on {Dual} {Quaternion} {Algebra} -- {Part} {I}: {Fundamentals}},
 	url = {https://hal.archives-ouvertes.fr/hal-01478225v1},
 	institution = {Federal University of Minas Gerais},
@@ -683,7 +680,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {111--116},
 }
 
-@conference{Silva2019,
+@inproceedings{Silva2019,
 	title = {Wrench {Control} based on {Dual} {Quaternion} {Algebra}},
 	url = {https://zenodo.org/record/3566650},
 	doi = {10.5281/zenodo.3566650},
@@ -693,7 +690,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@conference{Pereira2019,
+@inproceedings{Pereira2019,
 	title = {Manipulation {Task} {Planning} and {Motion} {Control} {Using} {Task} {Relaxations}},
 	url = {https://zenodo.org/record/3566726},
 	doi = {10.5281/zenodo.3566726},
@@ -703,7 +700,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@conference{Quiroz-Omana2019a,
+@inproceedings{Quiroz-Omana2019a,
 	title = {Bimanual {Mobile} {Manipulation} {Using} the {Cooperative} {Dual} {Task}-{Space} {Framework} and {Vector} {Fields} {Inequalities}},
 	url = {https://zenodo.org/record/3566806},
 	doi = {10.5281/zenodo.3566806},
@@ -713,7 +710,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@conference{Brito2019,
+@inproceedings{Brito2019,
 	title = {Distributed {Coverage} of {Boundaries} for {Multi}-robot {Systems} {Using} {Dual} {Quaternion} {Algebra}},
 	url = {https://zenodo.org/record/3566792},
 	doi = {10.5281/zenodo.3566792},
@@ -723,7 +720,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@conference{Fonseca2019,
+@inproceedings{Fonseca2019,
 	title = {Task-{Space} {Impedance} {Controller} {Using} {Dual} {Quaternion} {Logarithm}},
 	url = {https://zenodo.org/record/3566610},
 	doi = {10.5281/zenodo.3566610},
@@ -733,7 +730,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@conference{Campos2019,
+@inproceedings{Campos2019,
 	title = {Human {Gesture} {Recognition} using {Dual} {Quaternion} {Algebra}},
 	url = {https://zenodo.org/record/3566656},
 	doi = {10.5281/zenodo.3566656},
@@ -743,7 +740,7 @@ Publisher: Federal University of Minas Gerais},
 	pages = {1--2},
 }
 
-@conference{Urban2019,
+@inproceedings{Urban2019,
 	title = {Constraint-based {Gait} {Control} {Using} {Differential} {Inequalities}},
 	url = {https://zenodo.org/record/3566763},
 	doi = {10.5281/zenodo.3566763},
@@ -766,7 +763,7 @@ Publisher: Federal University of Minas Gerais},
 	month = jan,
 	year = {2020},
 	note = {arXiv: 1810.08871
-Publisher: Elsevier Ltd},
+	Publisher: Elsevier Ltd},
 	pages = {142--178},
 }
 
@@ -820,7 +817,7 @@ Publisher: Elsevier Ltd},
 	month = feb,
 	year = {2021},
 	note = {Publisher: Journal of Intelligent \& Robotic Systems
-ISBN: 1084602001275},
+	ISBN: 1084602001275},
 	keywords = {adaptive control, robot manipulator, Dual quaternion, Adaptive control, Robot manipulator, Ill-conditioning, ill-conditioning, Admittance control, admittance control, dynamic control, Dynamic control},
 	pages = {41},
 }
@@ -837,7 +834,7 @@ ISBN: 1084602001275},
 	month = oct,
 	year = {2021},
 	note = {arXiv: 1811.05436
-Publisher: Elsevier Ltd},
+	Publisher: Elsevier Ltd},
 	pages = {109817},
 }
 
@@ -854,7 +851,7 @@ Publisher: Elsevier Ltd},
 	month = sep,
 	year = {2021},
 	note = {arXiv: 1910.11612
-Publisher: IEEE},
+	Publisher: IEEE},
 	keywords = {Quaternions, Manipulators, Robot kinematics, Algebra, Libraries, Matlab},
 	pages = {102--116},
 }
@@ -906,7 +903,7 @@ Publisher: IEEE},
 	pages = {1103--1115},
 }
 
-@unpublished{Adorno2022,
+@misc{Adorno2022,
 	title = {The {IncompleteGuide} to {Academic} {Writing} in {Robotics} {Research}},
 	url = {https://incompleteguides.github.io/},
 	author = {Adorno, Bruno Vilhena and Marinho, Murilo Marques},
@@ -943,7 +940,7 @@ Publisher: IEEE},
 	annote = {There is a typo in the value of alpha. The correct is the one in the figure; that is, alpha is +1 when the CoM is above the horizontal axis and -1 otherwise. Remember to put an errata on my Webpage.},
 }
 
-@unpublished{Silva2022a,
+@article{Silva2022a,
 	title = {Dynamic {Modeling} of {Branched} {Robots} using {Modular} {Composition}},
 	url = {http://arxiv.org/abs/2208.01795},
 	abstract = {This letter proposes a systematic modular procedure for the dynamic modeling of branched robots comprising several subsystems, each of which being composed of multiple rigid bodies. Furthermore, the proposed strategy is applicable even if some subsystems are regarded as black boxes, requiring only the twists and wrenches at the connection points between different subsystems. To help in the model composition, we also propose a graph representation that encodes the propagation of twists and wrenches between the subsystems. Numerical results show that the proposed formalism is as accurate as a state-of-the-art library for robotic dynamic modeling.},
@@ -952,36 +949,105 @@ Publisher: IEEE},
 	month = aug,
 	year = {2022},
 	note = {arXiv: 2208.01795},
-	pages = {1--12},
+	pages = {1--16},
 }
 
 @article{tang_design_2023,
-	title = {Design {Requirements} of {Robotic} {Systems} for {Assisting} {Percutaneous} {Tracheostomy}: a {Scoping} {Review} and {Development} {Framework}},
+	title = {Design {Requirements} of {Robotic} {Systems} for {Assisting} {Percutaneous} {Tracheostomy}: {A} {Scoping} {Review} and {Development} {Framework}},
+	volume = {5},
 	issn = {2576-3202},
 	shorttitle = {Design {Requirements} of {Robotic} {Systems} for {Assisting} {Percutaneous} {Tracheostomy}},
 	url = {https://ieeexplore.ieee.org/document/10234533/},
 	doi = {10.1109/TMRB.2023.3309946},
-	abstract = {Percutaneous dilatational tracheostomy (PDT) is a common procedure for patients managed in Intensive Care Units (ICUs). PDT has equivalent complication rates to surgical tracheostomy but can be performed at the ICU bedside, eliminating delays in the procedure. However, PDT complications associated with initial needle insertion into the trachea still exist and can cause severe consequences such as pneumothorax, major haemorrhage, and death. Robotic technology is a powerful adjunct to assist manual surgery, improving procedural safety and accuracy. Whilst robotic surgery of the airway has become established, there is limited research and guidance regarding robotics to assist tracheostomy insertions. This study aims to identify design requirements that map clinical needs to design details and motivate the development of a scientific design framework in robotic tracheostomy. A literature search in Google Scholar, PubMed, and Web of Science on topics relevant to robotic tracheostomy was conducted. Clinical requirements were evaluated by distributing an online questionnaire to professional clinicians. Thirteen eligible studies were presented, from which 36 design requirements in four categories were collected. We present a design framework to inform the development of robotic tracheostomy with key requirements validated for suitability by relevant healthcare professionals.},
-	language = {en},
-	urldate = {2023-09-03},
+	number = {4},
+	urldate = {2023-11-25},
 	journal = {IEEE Transactions on Medical Robotics and Bionics},
 	author = {Tang, Yuan and Li, Lutong and Lu, Zhanghao and Haron, Athia and Adorno, Bruno V. and McGrath, Brendan and Weightman, Andrew},
+	month = nov,
 	year = {2023},
-	pages = {1--14},
-}
-
-@inproceedings{dursun_maintaining_2023,
-	title = {Maintaining {Visibility} of {Dynamic} {Objects} in {Cluttered} {Environments} {Using} {Mobile} {Manipulators} and {Vector} {Field} {Inequalities}},
-	copyright = {All rights reserved},
-	booktitle = {2023 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems} ({IROS})},
-	author = {Dursun, Fatih and Adorno, Bruno Vilhena and Watson, Simon and Pan, Wei},
-	year = {2023},
+	pages = {754--767},
 }
 
 @inproceedings{pereira_task_2023,
+	address = {Detroit, MI, USA},
 	title = {Task {Planning} and {Motion} {Control} with {Temporal} {Logic} {Specifications}},
+	copyright = {All rights reserved},
+	isbn = {978-1-66549-190-7},
+	url = {https://ieeexplore.ieee.org/document/10341494/},
+	doi = {10.1109/IROS55552.2023.10341494},
+	urldate = {2023-12-19},
 	booktitle = {2023 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems} ({IROS})},
 	publisher = {IEEE},
-	author = {Pereira, Marcos Silva and Pimenta, Luciano Cunha Araújo and Adorno, Bruno Vilhena},
+	author = {Pereira, Marcos S. and Pimenta, Luciano C. A. and Adorno, Bruno V.},
+	month = oct,
+	year = {2023},
+	pages = {2034--2041},
+}
+
+@inproceedings{dursun_maintaining_2023,
+	address = {Detroit, MI, USA},
+	title = {Maintaining {Visibility} of {Dynamic} {Objects} in {Cluttered} {Environments} {Using} {Mobile} {Manipulators} and {Vector} {Field} {Inequalities}},
+	isbn = {978-1-66549-190-7},
+	url = {https://ieeexplore.ieee.org/document/10341763/},
+	doi = {10.1109/IROS55552.2023.10341763},
+	urldate = {2023-12-19},
+	booktitle = {2023 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems} ({IROS})},
+	publisher = {IEEE},
+	author = {Dursun, Fatih and Adorno, Bruno Vilhena and Watson, Simon and Pan, Wei},
+	month = oct,
+	year = {2023},
+	pages = {6371--6378},
+}
+
+@inproceedings{johnson_receding_2023,
+	address = {London},
+	title = {Receding {Horizon} {Contact} {Planning} for {Agile} {Motions} in {Hexapod} {Robots}},
+	copyright = {All rights reserved},
+	abstract = {This work proposes a planning approach for agile motions in hexapod robots. The algorithm explores contact sequences until a user-defined planning horizon is reached. The move leading to the best position on the horizon is executed, and exploration resumes. The planning comprising exploration plus optimal motion within the planning horizon continues until the desired stance is reached. In preliminary simulations, the algorithm returned a path requiring 33\% fewer contact changes than the state of the art while generating 64\% more nodes.},
+	booktitle = {{ICRA} 2023 {Workshop} on {Agile} {Movements}: {Animal} {Behavior}, {Biomechanics}, and {Robot} {Devices}},
+	author = {Johnson, Daniel and Adorno, Bruno Vilhena and Watson, Simon},
+	year = {2023},
+	pages = {1--3},
+}
+
+@inproceedings{johnson_receding_2023-1,
+	address = {Cambridge, UK},
+	title = {Receding {Horizon} {Contact} {Planning} for {Advanced} {Motions} in {Hexapod} {Robots}},
+	copyright = {All rights reserved},
+	abstract = {This work proposes a planning approach for advanced motions in hexapod robots. Contact sequences are explored until a user-defined planning horizon is reached. The contact change leading to the best position on the horizon is executed, and exploration resumes. In preliminary simulations, the algorithm consistently returned paths requiring at least 20\% fewer contact changes than the state-of-the-art. Our algorithm generated 48.0\% fewer nodes than the state-of-the-art in one terrain and 0.5\% more in another, leading future work to examine the effects of specific environmental features on the number of nodes generated.},
+	booktitle = {Proceedings of the 24th {Annual} {TAROS} 2023 {Conference} - {Extended} {Abstracts}},
+	author = {Johnson, Daniel and Adorno, Bruno Vilhena and Watson, Simon},
+	year = {2023},
+	pages = {34--37},
+}
+
+@inproceedings{leslie-dalley_control_2024,
+	address = {Oxford, UK},
+	title = {Control {Strategies} for the {Task} {Definition} of {Constrained} {Bimanual} {Manipulation}},
+	copyright = {All rights reserved},
+	abstract = {This work describes two use-cases to present strategies for the definition of constrained bimanual manipulation tasks. We use the cooperative dual task-space (CDTS) framework, vector field inequalities (VFIs) and geometric primitives such as Plücker lines and planes to implement collision avoidance with the environment and preserve the integrity of the task. Simulations of the use-cases were carried out and showed that all implemented constraints were upheld through the execution of the bimanual manipulation task.},
+	booktitle = {5th {UK} {Robot} {Manipulation} {Workshop}},
+	author = {Leslie-Dalley, Seyonne and Groves, Keir and Adorno, Bruno Vilhena},
+	year = {2024},
+	pages = {1--2},
+}
+
+@inproceedings{tang_automated_2024,
+	address = {Oxford, UK},
+	title = {Automated {Robotic} {Needle} {Puncture} for {Percutaneous} {Dilatational} {Tracheostomy}},
+	copyright = {All rights reserved},
+	booktitle = {5th {UK} {Robot} {Manipulation} {Workshop}},
+	author = {Tang, Yuan and McGrath, Brendan and Weightman, Andrew and Adorno, Bruno Vilhena},
+	year = {2024},
+	pages = {1--2},
+}
+
+@inproceedings{tang_clinical_2023,
+	title = {Clinical {Perspective} of {Developing} {Robotic} {Systems} for {Assisting} {Percutaneous} {Tracheostomy}},
+	copyright = {All rights reserved},
+	language = {English},
+	booktitle = {28th {Congress} of the {European} {Society} of {Biomechanics}, {July} 9-12, 2023, {Maastricht}, the {Netherlands}},
+	author = {Tang, Yuan and Li, Lutong and Yuan, Pu and Lu, Zhanghao and Adorno, Bruno V. and Mcgrath, Brendan and Weightman, Andrew},
+	month = apr,
 	year = {2023},
 }
