--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -332,7 +332,7 @@
 	volume = {5},
 	issn = {2576-3202},
 	shorttitle = {Design {Requirements} of {Robotic} {Systems} for {Assisting} {Percutaneous} {Tracheostomy}},
-	url = {https://ieeexplore.ieee.org/document/10234533/},
+	html = {https://ieeexplore.ieee.org/document/10234533/},
 	doi = {10.1109/TMRB.2023.3309946},
 	number = {4},
 	urldate = {2023-11-25},
