--- a/_bibliography/abstracts.bib
+++ b/_bibliography/abstracts.bib
@@ -2,6 +2,7 @@
 @inproceedings{Bernardes2011,
 	address = {Berlin},
 	title = {Path planning for steerable needles using duty-cycling},
+	html = {https://link.springer.com/article/10.1007/s11548-011-0614-0}
 	doi = {10.1007/s11548-011-0614-0},
 	booktitle = {{CARS} 2011 {Computer} {Assisted} {Radiology} and {Surgery}},
 	publisher = {Springer},
@@ -13,7 +14,7 @@
 
 @inproceedings{Urban2019,
 	title = {Constraint-based {Gait} {Control} {Using} {Differential} {Inequalities}},
-	url = {https://zenodo.org/record/3566763},
+	html = {https://zenodo.org/record/3566763},
 	doi = {10.5281/zenodo.3566763},
 	booktitle = {Workshop on {Applications} of {Dual} {Quaternion} {Algebra} to {Robotics}},
 	author = {Urban, Stella Diniz and Adorno, Bruno Vilhena},
@@ -24,7 +25,7 @@
 
 @inproceedings{Silva2019,
 	title = {Wrench {Control} based on {Dual} {Quaternion} {Algebra}},
-	url = {https://zenodo.org/record/3566650},
+	html = {https://zenodo.org/record/3566650},
 	doi = {10.5281/zenodo.3566650},
 	booktitle = {Workshop on {Applications} of {Dual} {Quaternion} {Algebra} to {Robotics}},
 	author = {Silva, Frederico Fernandes Afonso and Adorno, Bruno Vilhena},
@@ -34,7 +35,7 @@
 
 @inproceedings{Pereira2019,
 	title = {Manipulation {Task} {Planning} and {Motion} {Control} {Using} {Task} {Relaxations}},
-	url = {https://zenodo.org/record/3566726},
+	html = {https://zenodo.org/record/3566726},
 	doi = {10.5281/zenodo.3566726},
 	booktitle = {Workshop on {Applications} of {Dual} {Quaternion} {Algebra} to {Robotics}},
 	author = {Pereira, Marcos da Silva and Adorno, Bruno Vilhena},
@@ -44,7 +45,7 @@
 
 @inproceedings{Quiroz-Omana2019a,
 	title = {Bimanual {Mobile} {Manipulation} {Using} the {Cooperative} {Dual} {Task}-{Space} {Framework} and {Vector} {Fields} {Inequalities}},
-	url = {https://zenodo.org/record/3566806},
+	html = {https://zenodo.org/record/3566806},
 	doi = {10.5281/zenodo.3566806},
 	booktitle = {Workshop on {Applications} of {Dual} {Quaternion} {Algebra} to {Robotics}},
 	author = {Quiroz-Omaña, Juan José and Adorno, Bruno Vilhena},
@@ -54,7 +55,7 @@
 
 @inproceedings{Brito2019,
 	title = {Distributed {Coverage} of {Boundaries} for {Multi}-robot {Systems} {Using} {Dual} {Quaternion} {Algebra}},
-	url = {https://zenodo.org/record/3566792},
+	html = {https://zenodo.org/record/3566792},
 	doi = {10.5281/zenodo.3566792},
 	booktitle = {Workshop on {Applications} of {Dual} {Quaternion} {Algebra} to {Robotics}},
 	author = {Brito, Rafael Palma and Adorno, Bruno Vilhena and Pimenta, Luciano Cunha de Araújo},
@@ -64,7 +65,7 @@
 
 @inproceedings{Fonseca2019,
 	title = {Task-{Space} {Impedance} {Controller} {Using} {Dual} {Quaternion} {Logarithm}},
-	url = {https://zenodo.org/record/3566610},
+	html = {https://zenodo.org/record/3566610},
 	doi = {10.5281/zenodo.3566610},
 	booktitle = {Workshop on {Applications} of {Dual} {Quaternion} {Algebra} to {Robotics}},
 	author = {Fonseca, Mariana de Paula Assis and Adorno, Bruno Vilhena and Fraisse, Philippe},
@@ -74,7 +75,7 @@
 
 @inproceedings{Campos2019,
 	title = {Human {Gesture} {Recognition} using {Dual} {Quaternion} {Algebra}},
-	url = {https://zenodo.org/record/3566656},
+	html = {https://zenodo.org/record/3566656},
 	doi = {10.5281/zenodo.3566656},
 	booktitle = {Workshop on {Applications} of {Dual} {Quaternion} {Algebra} to {Robotics}},
 	author = {Campos, Almada Christina Almada and Adorno, Bruno Vilhena},
@@ -91,6 +92,7 @@
 	author = {Johnson, Daniel and Adorno, Bruno Vilhena and Watson, Simon},
 	year = {2023},
 	pages = {34--37},
+	html = {https://research.manchester.ac.uk/en/publications/receding-horizon-contact-planning-for-advanced-motions-in-hexapod},
 }
 
 @inproceedings{johnson_receding_2023,
@@ -102,6 +104,7 @@
 	author = {Johnson, Daniel and Adorno, Bruno Vilhena and Watson, Simon},
 	year = {2023},
 	pages = {1--3},
+	html = {https://research.manchester.ac.uk/en/publications/receding-horizon-contact-planning-for-agile-motions-in-hexapod-ro},
 }
 
 @inproceedings{leslie-dalley_control_2024,
@@ -113,10 +116,12 @@
 	author = {Leslie-Dalley, Seyonne and Groves, Keir and Adorno, Bruno Vilhena},
 	year = {2024},
 	pages = {1--2},
+	html = {https://research.manchester.ac.uk/en/publications/control-strategies-for-the-task-definition-of-constrained-bimanua},
 }
 
 @inproceedings{tang_automated_2024,
 	address = {Oxford, UK},
+	html = {https://research.manchester.ac.uk/en/publications/automated-robotic-needle-puncture-for-percutaneous-dilatational-t},
 	title = {Automated {Robotic} {Needle} {Puncture} for {Percutaneous} {Dilatational} {Tracheostomy}},
 	copyright = {All rights reserved},
 	booktitle = {5th {UK} {Robot} {Manipulation} {Workshop}},
@@ -133,4 +138,5 @@
 	author = {Tang, Yuan and Li, Lutong and Yuan, Pu and Lu, Zhanghao and Adorno, Bruno V. and Mcgrath, Brendan and Weightman, Andrew},
 	month = apr,
 	year = {2023},
+	html = {https://research.manchester.ac.uk/en/publications/clinical-perspective-of-developing-robotic-systems-for-assisting-},
 }
