--- a/_bibliography/international_conferences.bib
+++ b/_bibliography/international_conferences.bib
@@ -7,12 +7,13 @@
 	month = oct,
 	year = {2009},
 	pages = {988--993},
+	html = {https://doi.org/10.1109/IROS.2009.5354533},
 }
 
 @inproceedings{Adorno2011a,
 	title = {Towards a cooperative framework for interactive manipulation involving a human and a humanoid},
 	isbn = {978-1-61284-386-5},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=5979787},
+	html = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=5979787},
 	doi = {10.1109/ICRA.2011.5979787},
 	abstract = {In this paper we propose a novel approach for interactive manipulation involving a human and a humanoid. The interaction is represented by means of the relative configuration between the human's and the robot's hands. Based on this principle and a set of mathematical tools also proposed in the paper, a large set of tasks can be represented intuitively. We also introduce the concept of simultaneous handling using mirrored movements, where the human controls the robot and simultaneously interacts with it by means of a common manipulated object. Illustrative experiments are performed to validate the proposed techniques.},
 	urldate = {2012-09-01},
@@ -28,7 +29,7 @@
 @inproceedings{Bernardes2011b,
 	title = {Adaptive path planning for steerable needles using duty-cycling},
 	isbn = {978-1-61284-456-5},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6094594},
+	html = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6094594},
 	doi = {10.1109/IROS.2011.6094594},
 	urldate = {2012-09-01},
 	booktitle = {2011 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems}},
@@ -41,7 +42,7 @@
 @inproceedings{Adorno2011d,
 	title = {Interactive manipulation between a human and a humanoid: {When} robots control human arm motion},
 	isbn = {978-1-61284-456-5},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6094869},
+	html = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6094869},
 	doi = {10.1109/IROS.2011.6094869},
 	urldate = {2012-09-01},
 	booktitle = {2011 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems}},
@@ -55,7 +56,7 @@
 	address = {Minnesota},
 	title = {Semi-automatic needle steering system with robotic manipulator},
 	isbn = {978-1-4673-1403-9},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6225185},
+	html = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6225185},
 	doi = {10.1109/ICRA.2012.6225185},
 	abstract = {This paper presents a semi-automatic system for robot-assisted 2D needle steering that uses duty-cycling to perform insertions with arcs of adjustable curvature radius. It combines image feedback manually provided by an operator with an adaptive path planning strategy to compensate for system uncertainties and changes in the workspace during the procedure. Experimental results are presented to validate the proposed platform.},
 	urldate = {2014-02-19},
@@ -71,7 +72,7 @@
 @inproceedings{Lana2013a,
 	title = {An {ERD}/{ERS} analysis of the relation between human arm and robot manipulator movements},
 	isbn = {978-1-4673-3024-4},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6487461},
+	html = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6487461},
 	doi = {10.1109/BRC.2013.6487461},
 	abstract = {This work aims to analyze the relation between the movement of an anthropomorphic robotic manipulator with the brain cortex response elicited in healthy subjects for three experimental conditions. The experiment was divided in three parts: in the first one, the subject only observes the movement of the robotic manipulator; in the second part, the subject follows the robot movement with his right arm; finally, in the third part, the subject imagines the execution of the corresponding movement synchronized with the robot movement. Event related (de)synchronization in each of the recorded electroencephalogram channels was analyzed. Event related desynchronization was present in alpha and beta bands in various areas of the cortex, including occipital, parietal, central and prefrontal areas. The results provided some physiological insights into human-robot interaction for future developments in brain-machine interfaces.},
 	urldate = {2014-06-26},
@@ -90,7 +91,7 @@
 	address = {Chicago},
 	title = {Switching strategy for flexible task execution using the cooperative dual task-space framework},
 	isbn = {978-1-4799-6934-0},
-	url = {http://ieeexplore.ieee.org/document/6942784/},
+	html = {http://ieeexplore.ieee.org/document/6942784/},
 	doi = {10.1109/IROS.2014.6942784},
 	booktitle = {2014 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems}},
 	publisher = {IEEE},
@@ -104,7 +105,7 @@
 	address = {Seattle, Washington},
 	title = {A new algebraic approach for the description of robotic manipulation tasks},
 	isbn = {978-1-4799-6923-4},
-	url = {http://ieeexplore.ieee.org/document/7139622/},
+	html = {http://ieeexplore.ieee.org/document/7139622/},
 	doi = {10.1109/ICRA.2015.7139622},
 	booktitle = {2015 {IEEE} {International} {Conference} on {Robotics} and {Automation} ({ICRA})},
 	publisher = {IEEE},
@@ -118,7 +119,7 @@
 @inproceedings{Marinho2015,
 	title = {A dual quaternion linear-quadratic optimal controller for trajectory tracking},
 	isbn = {978-1-4799-9994-1},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7353948},
+	html = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7353948},
 	doi = {10.1109/IROS.2015.7353948},
 	abstract = {This work addresses the task-space design prob- lem of a linear-quadratic optimal tracking controller for robotic manipulators using the unit dual quaternion formalism. The efficiency, compactness, and lack of singularity of the representation render the unit dual quaternion a suitable framework for simultaneously describing the attitude and the position of the end-effector. Motivated by the advantages of this kinematic description, we propose a new task-space linear- quadratic optimal tracking controller in order to find an optimal trajectory for the end-effector, providing a tool to balance more conveniently the end-effector error and its task- space velocity. This is possible because the kinematic control problem using the dual quaternion transformation invariant error can be reduced to an affine time-varying system. The proposed optimal tracking controller allows the compensation of trajectory induced disturbances, as well as other modeled additive disturbances and known bias. Simulation results with different design parameters provide a performance overview, in comparison with standard kinematic controllers with and without a feed-forward term, for tracking a desired reference.},
 	booktitle = {2015 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems} ({IROS})},
@@ -132,7 +133,7 @@
 @inproceedings{Figueredo2013,
 	title = {Robust kinematic control of manipulator robots using dual quaternion representation},
 	isbn = {978-1-4673-5643-5},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6630836},
+	html = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6630836},
 	doi = {10.1109/ICRA.2013.6630836},
 	abstract = {This paper addresses the H∞ robust control problem for robot manipulators using unit dual quaternion representation, which allows an utter description of the end-effector transformation without decoupling rotational and translational dynamics. We propose three different H∞ control criteria that ensure asymptotic convergence, whereas reducing the influence of disturbances upon the system stability. Also, with a new metric of dual quaternion error in SE(3) we prove independence from robot coordinate changes. Simulation results highlight the importance and effectiveness of the proposed approach in terms of performance, robustness, and energy efficiency.},
 	urldate = {2014-02-19},
@@ -148,7 +149,7 @@
 @inproceedings{Adorno2010,
 	title = {Dual position control strategies using the cooperative dual task-space framework},
 	isbn = {978-1-4244-6674-0},
-	url = {http://ieeexplore.ieee.org/document/5650218/},
+	html = {http://ieeexplore.ieee.org/document/5650218/},
 	doi = {10.1109/IROS.2010.5650218},
 	urldate = {2011-01-07},
 	booktitle = {2010 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems}},
@@ -177,7 +178,7 @@
 	address = {Aalborg, Denmark},
 	title = {Robust whole-body control of an unmanned aerial manipulator},
 	isbn = {978-1-5090-2591-6},
-	url = {http://ieeexplore.ieee.org/document/7810371/},
+	html = {http://ieeexplore.ieee.org/document/7810371/},
 	doi = {10.1109/ECC.2016.7810371},
 	booktitle = {2016 {European} {Control} {Conference} ({ECC})},
 	publisher = {IEEE},
@@ -191,7 +192,7 @@
 @inproceedings{Marinho2018a,
 	title = {Active {Constraints} {Using} {Vector} {Field} {Inequalities} for {Surgical} {Robots}},
 	isbn = {978-1-5386-3081-5},
-	url = {https://ieeexplore.ieee.org/document/8461105/},
+	html = {https://ieeexplore.ieee.org/document/8461105/},
 	doi = {10.1109/ICRA.2018.8461105},
 	booktitle = {2018 {IEEE} {International} {Conference} on {Robotics} and {Automation} ({ICRA})},
 	publisher = {IEEE},
@@ -207,7 +208,7 @@
 	address = {Montreal},
 	title = {A {Unified} {Framework} for the {Teleoperation} of {Surgical} {Robots} in {Constrained} {Workspaces}},
 	isbn = {978-1-5386-6027-0},
-	url = {http://arxiv.org/abs/1809.07907},
+	html = {http://doi.org/10.1109/ICRA.2019.8794363},
 	doi = {10.1109/ICRA.2019.8794363},
 	abstract = {In adult laparoscopy, robot-aided surgery is a reality in thousands of operating rooms worldwide, owing to the increased dexterity provided by the robotic tools. Many robots and robot control techniques have been developed to aid in more challenging scenarios, such as pediatric surgery and microsurgery. However, the prevalence of case-specific solutions, particularly those focused on non-redundant robots, reduces the reproducibility of the initial results in more challenging scenarios. In this letter, we propose a general framework for the control of surgical robotics in constrained workspaces under teleoperation, regardless of the robot geometry. Our technique is divided into a slave-side constrained optimization algorithm, which provides virtual fixtures, and with Cartesian impedance on the master side to provide force feedback. Experiments with two robotic systems, one redundant and one non-redundant, show that smooth teleoperation can be achieved in adult laparoscopy and infant surgery.},
 	booktitle = {2019 {International} {Conference} on {Robotics} and {Automation} ({ICRA})},
@@ -224,7 +225,7 @@
 	address = {Belo Horizonte},
 	title = {An {Adaptive} {Controller} with {Guarantee} of {Better} {Conditioning} of the {Robot} {Manipulator} {Joint}-{Space} {Inertia} {Matrix}},
 	isbn = {978-1-72812-467-4},
-	url = {https://ieeexplore.ieee.org/document/8981558/},
+	html = {https://ieeexplore.ieee.org/document/8981558/},
 	doi = {10.1109/ICAR46387.2019.8981558},
 	booktitle = {2019 19th {International} {Conference} on {Advanced} {Robotics} ({ICAR})},
 	publisher = {IEEE},
@@ -238,7 +239,7 @@
 	address = {Kyoto},
 	title = {Set-point {Control} for a {Ground}-based {Reconfigurable} {Robot}},
 	isbn = {978-1-66547-927-1},
-	url = {https://ieeexplore.ieee.org/document/9981358/},
+	html = {https://ieeexplore.ieee.org/document/9981358/},
 	doi = {10.1109/IROS47612.2022.9981358},
 	booktitle = {2022 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems} ({IROS})},
 	publisher = {IEEE},
@@ -254,7 +255,7 @@
 	title = {Task {Planning} and {Motion} {Control} with {Temporal} {Logic} {Specifications}},
 	copyright = {All rights reserved},
 	isbn = {978-1-66549-190-7},
-	url = {https://ieeexplore.ieee.org/document/10341494/},
+	html = {https://ieeexplore.ieee.org/document/10341494/},
 	doi = {10.1109/IROS55552.2023.10341494},
 	urldate = {2023-12-19},
 	booktitle = {2023 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems} ({IROS})},
@@ -269,7 +270,7 @@
 	address = {Detroit, MI, USA},
 	title = {Maintaining {Visibility} of {Dynamic} {Objects} in {Cluttered} {Environments} {Using} {Mobile} {Manipulators} and {Vector} {Field} {Inequalities}},
 	isbn = {978-1-66549-190-7},
-	url = {https://ieeexplore.ieee.org/document/10341763/},
+	html = {https://ieeexplore.ieee.org/document/10341763/},
 	doi = {10.1109/IROS55552.2023.10341763},
 	urldate = {2023-12-19},
 	booktitle = {2023 {IEEE}/{RSJ} {International} {Conference} on {Intelligent} {Robots} and {Systems} ({IROS})},
